--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,13 +1,14 @@
 name: Publish Acorn image
-on:
-  push:
-    tags:
-      - "v[0-9]*"
+on: workflow_dispatch
+# on:
+#   push:
+#     tags:
+#       - "v[0-9]*"
 
 jobs:
   publish:
     name: Publish
-#    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu
     steps:
       - name: Checkout
         uses: actions/checkout@v3
