--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,14 +1,14 @@
 name: Publish Acorn image
-on: workflow_dispatch
-# on:
-#   push:
-#     tags:
-#       - "v[0-9]*"
+on:
+  workflow_dispatch:
+  push:
+    tags:
+      - "v[0-9]*"
 
 jobs:
   publish:
     name: Publish
-    runs-on: ubuntu
+    # runs-on: ubuntu
     steps:
       - name: Checkout
         uses: actions/checkout@v3
